user-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shopnow-user-service
  name: shopnow-user-service-deployment
  namespace: shopnow
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: shopnow-user-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shopnow-user-service
      namespace: shopnow
    spec:
      containers:
        - image: thuanlp/shopnow_user-service:v1
          imagePullPolicy: Always
          name: shopnow-user-service
          ports:
            - containerPort: 5865
              name: tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /app/src/main/resources/application.properties
              name: shopnow-user-service-application-properties-config-volume
              subPath: application.properties
      imagePullSecrets:
      - name: dockerhub
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - configMap:
            defaultMode: 420
            name: shopnow-user-service-application-properties-configmap
          name: shopnow-user-service-application-properties-config-volume
