user-service/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: shopnow-user-service-rollout
  namespace: shopnow
  labels:
    app: shopnow-user-service
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: shopnow-user-service
  template:
    metadata:
      labels:
        app: shopnow-user-service
    spec:
      containers:
        - name: shopnow-user-service
          image: thuanlp/shopnow_user-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5865
              name: tcp
              protocol: TCP
          resources:
            requests:
              memory: "400Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "800m"
          volumeMounts:
            - mountPath: /app/src/main/resources/application.properties
              name: shopnow-user-service-application-properties-config-volume
              subPath: application.properties
      imagePullSecrets:
        - name: dockerhub
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: shopnow-user-service-application-properties-config-volume
          configMap:
            name: shopnow-user-service-application-properties-configmap
            defaultMode: 420
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause:
            duration: 10
        - setWeight: 60
        - pause:
            duration: 10
        - setWeight: 80
        - pause:
            duration: 10
