user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopnow-user-service-service
  namespace: shopnow
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 5865
      protocol: TCP
      targetPort: 5865
  selector:
    app: shopnow-user-service
  sessionAffinity: None
  type: ClusterIP
