user-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopnow-user-service-ingress
  namespace: shopnow
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - user-service.lptdevops.website
    secretName: keycloak-tls  
  rules:
    - host: user-service.lptdevops.website
      http:
        paths:
          - backend:
              service:
                name: shopnow-user-service-service
                port:
                  number: 5865
            path: /
            pathType: Prefix
